<resources>
    <string name="see_connections">See connections</string>
    <string name="stop">Stop</string>
    <string name="permission_location_rationale" translatable="false">Please allow Location Permissions - Google requires this for your phone to scan for another phone’s Bluetooth. We do not use or store your location.</string>
    <string name="permission_write_rationale" translatable="false">TraceEkee needs save files for logs (Debug builds only)</string>
    <string name="ble_not_supported">This device does not support BLE</string>

    <string name="tv_onboarding_title">Help stop the spread of COVID-19 by turning Bluetooth on</string>
    <string name="tv_onboarding_desc">If you had close contact with a COVID-19 case, we help the health authorities call you more quickly, to provide guidance and care.</string>
    <string name="tv_onboarding_desc_sub">To protect those around you, OTC may also ask you to share your data.</string>
    <string name="i_want_to_help">I want to help</string>

    <string name="tv_howitworks_title">How it works</string>
    <string name="tv_howitworks_explanation_1">We use Bluetooth signals to determine if you are near another TraceEkee user.</string>
    <string name="tv_howitworks_explanation_2">This proximity data is encrypted and stored only on your phone.</string>
    <string name="tv_howitworks_explanation_3">HPA will seek your consent to upload the data, if it’s needed for contact tracing.</string>
    <string name="mobile_number">Mobile number</string>
    <string name="register_number">Register your mobile number</string>
    <string name="register_number_details">We\'ll contact you if you had close contact with a COVID-19 case.</string>
    <string name="register_number_family">Setting up for your family? \nUse their number instead of yours.</string>
    <string name="invalid_length">Needs to be 8-digits</string>
    <string name="invalid_number">Invalid Mobile Number</string>

    <string name="enter_otp">Enter your OTP</string>
    <string name="otp_sent">A 6-digit code has been sent to %s.</string>
    <string name="resend_code">Resend Code</string>

    <string name="setup_app_permission">\Set up app permissions</string>
    <string name="setup_app_permission_title">Select \'<b>Yes</b>\' or \'<b>Allow</b>\' for the next few screens to set up.</string>
    <string name="bluetooth">1. Bluetooth</string>
    <string name="location_permissions">2. Location Permissions</string>
    <string name="battery_optimiser_opt">3. Battery Optimiser</string>
    <string name="push_opt">3. Battery Optimiser</string>
    <string name="notes">Android needs Location Permissions for Bluetooth to work. We don\'t have access to your physical location.</string>
    <string name="proceed">Proceed</string>
    <string name="continue_">Continue</string>
    <string name="get_otp">Send OTP code</string>
    <string name="wrong_number">Wrong Number?</string>
    <string name="app_permission_fully_setup">App permissions are fully set up</string>
    <string name="app_permission_fully_setup_desc">Please leave all settings on until the outbreak ends.</string>

    <string name="send_otp">We\'ll text you a One-Time Pin (OTP)</string>

    <string name="title_home">Home</string>
    <string name="title_upload">Upload</string>
    <string name="title_help">Help</string>
    <string name="title_info">Info</string>
    <string name="title_hotline">Hotline</string>

    <string name="how_to_help">How you can help stop the spread of COVID-19</string>
    <string name="help_action">Keep app open, and let it run in the background until the end of the outbreak</string>

    <string name="app_permission_status">App Permissions Status</string>
    <string name="bluetooth_on">Bluetooth: On</string>
    <string name="location_on">Location Permission: On</string>
    <string name="battery_optimiser">Battery Optimisation: Off</string>
    <string name="push_noti">Push Notification: On</string>
    <string name="share_this_app">Share this app</string>
    <string name="ask_friend">Ask friends and family to help</string>
    <string name="help_us_identify">Help stop the virus spread by allowing all permissions</string>
    <string name="restart_app_setup">Complete app setup</string>
    <string name="upload_data">Upload Data</string>
    <string name="for_official_use">For use by contact tracers</string>
    <string name="data_uploaded">Data has been uploaded to contact tracers</string>
    <string name="upload_agreement_1">By uploading, you agree to share with HPA your TraceEkee proximity data for the past 21 days.</string>
    <string name="upload_agreement_2">We do not collect any geolocation or personal data.</string>
    <string name="enter_code">Enter Code</string>
    <string name="submit">Submit</string>
    <string name="open_location_setting">Application needs location permission in order to work. Do you want to enable location permission?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="setup_incomplete">Setup is incomplete!</string>
    <string name="ack_title">Your consent is needed for the following:</string>
    <string name="ack_mobile">To store your mobile number in a secured HPA registry.</string>
    <string name="ack_data">To allow TraceEkee users to send HPA information of encounters with you, if they are confirmed or suspected to have COVID-19</string>
    <string name="otp">Please enter the OTP sent to your mobile phone via sms</string>
    <string name="keep_push_on">Keep push notifications on too, so we can alert you if the app is not scanning.</string>
    <string name="verification_failed">Verification failed. Please try again</string>
    <string name="invalid_otp">Wrong OTP entered</string>
    <string name="unknown_error">An error has occurred. Please try again</string>
    <string name="must_be_six_digit">Must be a 6-digit number</string>
    <string name="invalid_user">Your account has been disabled. Please contact support.</string>
    <string name="too_many_requests">Too many requests. Please try again later.</string>

    <string name="privacy_safeguards">privacy safeguards</string>

    <string name="service_ok_title" translatable="false">TraceEkee is scanning to keep you safe! :)</string>
    <string name="service_ok_body">Restart phone if this notification disappears</string>

    <string name="service_not_ok_title">Oh no! :(</string>
    <string name="service_not_ok_body" translatable="false">TraceEkee is not scanning.</string>
    <string name="service_not_ok_action">Check app now</string>

    <string name="share_message">Join me in stopping the spread of COVID-19! Download TraceEkee. Go to: https://trace.hpa.gov.mv/</string>
    <string name="begin">Begin</string>
    <string name="read_our">Read Our</string>
    <string name="read_privacy">Read our privacy safeguards</string>
    <string name="for_use_by_org">For use by HPA</string>
    <string name="upload_data_for_tracing">Upload data for contact tracing</string>
    <string name="diclaimer_for_upload">Please follow this step ONLY when you are contacted by HPA</string>
    <string name="step_one">STEP 1</string>
    <string name="verify_caller">Verify that the contact tracer is from HPA</string>
    <string name="verify_caller_desc">Make sure they give you a code that matches the one below</string>
    <string name="verification_code">Verification Code</string>
    <string name="next">Next</string>
    <string name="enter_pin">Enter PIN provided by HPA to upload</string>
    <string name="step_two">STEP 2</string>
    <string name="invalid_pin">Invalid PIN</string>
    <string name="upload_data_success">Your data has been uploaded successfully</string>
    <string name="done">Done</string>
    <string name="thank_you">Thank You</string>
    <string name="updates">Updates</string>
    <string name="stats">Stats</string>
    <string name="feed">Feed</string>
    <string name="push_notification">Push Notification</string>
    <string name="text_choose_language" translatable="false">Choose a language</string>
    <string name="verify_otp">Verify</string>
    <string name="otp_expire_in">Your code will expire in</string>
    <string name="consent_agree">I Agree</string>
</resources>
