<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/background_white_radius"
    android:weightSum="6">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/OnboardingDesc"
        android:id="@+id/info_disclaimer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:background="@drawable/yellow_rounded"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/diclaimer_for_upload"
        android:layout_height="wrap_content" />


        <LinearLayout
            android:id="@+id/rock"
            app:layout_constraintTop_toBottomOf="@id/info_disclaimer"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="22dp"
            android:orientation="vertical"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/step_one" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/OnboardingTitle"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verify_caller" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/OnboardingDesc"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verify_caller_desc" />
        </LinearLayout>

        <LinearLayout
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rock"
            app:layout_constraintBottom_toTopOf="@+id/verifyCallerFragmentActionButton"
            android:orientation="vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="4"
            android:gravity="center"
            app:layout_constraintVertical_bias="0.3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/verifyCallerFragmentVerificationCode"
                style="@style/OnboardingTitle"
                android:textSize="28sp"
                android:fontFamily="@font/hkgrotesk_bold"
                app:fontFamily="@font/hkgrotesk_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="JDEPLC" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/OnboardingDesc"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verification_code" />

        </LinearLayout>


    <com.google.android.material.button.MaterialButton
        style="@style/OnboardingButton"
        android:id="@+id/verifyCallerFragmentActionButton"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/next" />

</androidx.constraintlayout.widget.ConstraintLayout>
