<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_white_radius">



        <LinearLayout
            android:id="@+id/thisshit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/step_two" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/OnboardingTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/enter_pin" />

        </LinearLayout>


        <androidx.appcompat.widget.AppCompatEditText
            style="@style/OnboardingTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thisshit"
            app:layout_constraintBottom_toTopOf="@+id/thisothershit"
            android:id="@+id/enterPinFragmentUploadCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:imeOptions="actionGo"
            android:hint="000000"
            android:maxLength="6"
            app:layout_constraintVertical_bias="0.2"
            android:gravity="center"
            tools:text="123456"
            android:textSize="28sp" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/OnboardingDesc"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enterPinFragmentUploadCode"
            android:id="@+id/enterPinFragmentErrorMessage"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/invalid_pin"
            android:textColor="#C20000"
            android:textSize="16sp"
            android:visibility="invisible" />


        <LinearLayout
            android:id="@+id/thisothershit"
            app:layout_constraintBottom_toTopOf="@id/enterPinActionButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/OnboardingDesc"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_agreement_1" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/OnboardingTitle"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_agreement_2" />
        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            style="@style/OnboardingButton"
            android:id="@+id/enterPinActionButton"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/upload_data" />

</androidx.constraintlayout.widget.ConstraintLayout>
