<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.OnboardingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/footer">


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/on_boarding_banner"
            style="@style/OnboardingImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:lottie_rawRes="@raw/logo_traceekee_pulse"
            android:adjustViewBounds="true"
            app:layout_constraintWidth_percent="0.5"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            tools:srcCompat="@drawable/logo_traceekee_flat"
            android:layout_marginTop="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/on_boarding_sub_banner"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:srcCompat="@drawable/mohir_consent_2"
            app:lottie_autoPlay="true"
            android:layout_marginTop="15dp"
            app:lottie_loop="true"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/on_onboarding_container"
            app:layout_constraintTop_toBottomOf="@+id/on_boarding_banner" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/on_onboarding_container"
            app:layout_constraintTop_toBottomOf="@+id/on_boarding_sub_banner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="vertical"
            android:paddingTop="15dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                style="@style/OnboardingTitle"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/setup_app_permission"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_desc"
                style="@style/OnboardingDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/setup_app_permission_title"
                android:visibility="visible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/OnboardingDesc"
                android:id="@+id/tv_desc_sub_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="left"
                android:text="@string/bluetooth"
                android:visibility="visible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/OnboardingDesc"
                android:id="@+id/tv_desc_sub_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="left"
                android:text="@string/location_permissions"
                android:visibility="visible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_desc_sub_1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_desc_sub_3"
                style="@style/OnboardingDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="left"
                android:text="@string/battery_optimiser_opt"
                android:visibility="visible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_desc_sub_2" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/OnboardingDesc"
                android:id="@+id/tv_note_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/notes"
                android:paddingTop="30dp"
                android:visibility="visible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_desc_sub_3" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <include layout="@layout/button_and_progress" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
