<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ob_content2"
    android:paddingBottom="30dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    tools:showIn="@layout/main_activity_onboarding">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_textboundary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_desc"
        style="@style/OnboardingDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/tv_howitworks_explanation_1"
        android:visibility="visible"
        android:paddingRight="22dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guide_textboundary"
        app:layout_constraintTop_toTopOf="parent" />



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_desc2"
        style="@style/OnboardingDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_howitworks_explanation_2"
        android:visibility="visible"
        android:layout_marginTop="22dp"
        android:paddingRight="22dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guide_textboundary"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_desc3"
        style="@style/OnboardingDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_howitworks_explanation_3"
        android:visibility="visible"
        android:layout_marginTop="22dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guide_textboundary"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc2" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="64dp"
        android:layout_height="0dp"
        app:lottie_rawRes="@raw/onboard_icon_1"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="@id/tv_desc"
        app:layout_constraintBottom_toBottomOf="@id/tv_desc"

        app:layout_constraintLeft_toRightOf="@+id/guide_textboundary" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="64dp"
        android:layout_height="0dp"
        app:lottie_rawRes="@raw/onboard_icon_2"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="@id/tv_desc2"
        app:layout_constraintBottom_toBottomOf="@id/tv_desc2"
        app:layout_constraintLeft_toRightOf="@+id/guide_textboundary" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="64dp"
        android:layout_height="0dp"
        app:lottie_rawRes="@raw/onboard_icon_3"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="@id/tv_desc3"
        app:layout_constraintBottom_toBottomOf="@id/tv_desc3"
        app:layout_constraintLeft_toRightOf="@+id/guide_textboundary" />

</androidx.constraintlayout.widget.ConstraintLayout>