<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.OnboardingActivity">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/on_boarding_banner"
        style="@style/OnboardingImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:lottie_rawRes="@raw/logo_traceekee_pulse"
        android:adjustViewBounds="true"
        app:layout_constraintWidth_percent="0.5"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        tools:srcCompat="@drawable/logo_traceekee_flat"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/on_boarding_sub_banner"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        tools:srcCompat="@drawable/mohir_consent_2"
        app:lottie_rawRes="@raw/success_confetti"
        app:lottie_autoPlay="false"
        app:lottie_loop="false"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/on_boarding_banner" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        style="@style/OnboardingTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_permission_fully_setup"
        android:visibility="visible"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_desc"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_desc"
        style="@style/OnboardingDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_permission_fully_setup_desc"
        android:visibility="visible"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/share_card_view" />


        <androidx.cardview.widget.CardView
            android:id="@+id/share_card_view"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/footer"
            app:layout_constraintVertical_bias="0.23"
            android:layout_marginBottom="48dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            card_view:cardCornerRadius="12dp"
            card_view:cardMaxElevation="2dp"
            card_view:cardUseCompatPadding="true"
            card_view:contentPadding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/OnboardingTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/push_notification"
                    android:textColor="@color/black"
                    android:visibility="visible"
                    android:textSize="16sp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/OnboardingDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/keep_push_on"
                    android:textColor="@color/black"
                    android:visibility="visible"
                    android:layout_marginTop="8dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    <FrameLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <include layout="@layout/button_and_progress" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
